umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_ethane_eclipsed.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D3h
order: 12
equivalence_sets:
  - - C(0)
    - C(1)
  - - H(2)
    - H(3)
    - H(4)
    - H(5)
    - H(6)
    - H(7)
