umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_formaldehyde.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2v
order: 4
equivalence_sets:
  - - H(0)
    - C(1)
  - - H(2)
  - - O(3)
