umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_formylfluoride.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Cs
order: 2
equivalence_sets:
  - - C(0)
  - - O(1)
  - - H(2)
  - - F(3)
